force-app/main/default/objects/Website_Document_Pack_Assignment__c/Website_Document_Pack_Assignment__c.object-meta.xml
<CustomObject>
    <description>Used to assign Website Document Packs to a record (e.g. Framework)</description>
    <label>Website Document Pack Assignment</label>
    <nameField>
        <displayFormat>Pack Assignment {00000}</displayFormat>
        <label>Document Pack Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Website Document Pack Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>