force-app/main/default/objects/Website_Document_Pack_Assignment__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Framework</label>
    <referenceTo>Master_Framework__c</referenceTo>
    <relationshipName>Website_Document_Pack_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>