force-app/main/default/objects/Website_Document_Pack_Assignment__c/fields/Framework_or_upcoming_deal__c.field-meta.xml
<CustomField>
    <fullName>Framework_or_upcoming_deal__c</fullName>
    <label>Framework or upcoming deal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Framework</fullName>
            </value>
            <value>
                <fullName>Upcoming deal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>