force-app/main/default/objects/Website_Document_Pack_Assignment__c/fields/Website_Document_Pack__c.field-meta.xml
<CustomField>
    <fullName>Website_Document_Pack__c</fullName>
    <label>Document Pack</label>
    <referenceTo>Website_Document_Pack__c</referenceTo>
    <relationshipName>Website_Document_Pack_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>